--- a/app/templates/service.yaml
+++ b/app/templates/service.yaml
@@ -11,6 +11,6 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
-      nodePort: 30008
+      nodePort: {{ .Values.service.nodePort }}
   selector:
     {{- include "app.selectorLabels" . | nindent 4 }}
